--- a/src/StringMaster.UI/Resources/Icons.xaml
+++ b/src/StringMaster.UI/Resources/Icons.xaml
@@ -1,21 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <BitmapImage x:Key="NewToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/new.bmp" />
-    <BitmapImage x:Key="OpenToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/open.bmp" />
-    <BitmapImage x:Key="SaveToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/save.bmp" />
-    <BitmapImage x:Key="SaveAsToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/saveas.bmp" />
-    <BitmapImage x:Key="SettingsToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/settings.bmp" />
-    <BitmapImage x:Key="HelpToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/help.bmp" />
-    <BitmapImage x:Key="TickToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/tick.png" />
-    <BitmapImage x:Key="AddToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/add.png" />
-    <BitmapImage x:Key="RemoveToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/remove.bmp" />
-    <BitmapImage x:Key="ExecuteToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/execute.png" />
-    <BitmapImage x:Key="LayerOnImage" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/on.png" />
-    <BitmapImage x:Key="LayerOffImage" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/off.png" />
-    <BitmapImage x:Key="LayerFreezeImage" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/frozen.png" />
-    <BitmapImage x:Key="LayerThawImage" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/unfozen.png" />
-    <BitmapImage x:Key="LayerLockImage" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/locked.png" />
-    <BitmapImage x:Key="LayerUnlockImage" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/unlocked.png" />
-    <BitmapImage x:Key="KeyIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/key.png" />
-    <BitmapImage x:Key="DotsButton" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/dotsbutton.png" />
-    <BitmapImage x:Key="ImportToolBarIcon" UriSource="pack://application:,,,/StringMaster;component/Resources/Icons/import.png" />
+    <BitmapImage x:Key="NewToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/new.bmp" />
+    <BitmapImage x:Key="OpenToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/open.bmp" />
+    <BitmapImage x:Key="SaveToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/save.bmp" />
+    <BitmapImage x:Key="SaveAsToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/saveas.bmp" />
+    <BitmapImage x:Key="SettingsToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/settings.bmp" />
+    <BitmapImage x:Key="HelpToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/help.bmp" />
+    <BitmapImage x:Key="TickToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/tick.png" />
+    <BitmapImage x:Key="AddToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/add.png" />
+    <BitmapImage x:Key="RemoveToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/remove.bmp" />
+    <BitmapImage x:Key="ExecuteToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/execute.png" />
+    <BitmapImage x:Key="LayerOnImage" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/on.png" />
+    <BitmapImage x:Key="LayerOffImage" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/off.png" />
+    <BitmapImage x:Key="LayerFreezeImage" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/frozen.png" />
+    <BitmapImage x:Key="LayerThawImage" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/unfozen.png" />
+    <BitmapImage x:Key="LayerLockImage" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/locked.png" />
+    <BitmapImage x:Key="LayerUnlockImage" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/unlocked.png" />
+    <BitmapImage x:Key="KeyIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/key.png" />
+    <BitmapImage x:Key="DotsButton" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/dotsbutton.png" />
+    <BitmapImage x:Key="ImportToolBarIcon" UriSource="pack://application:,,,/StringMaster.UI;component/Resources/Icons/import.png" />
 </ResourceDictionary>
