--- a/src/StringMaster.UI/Resources/DataGrid.xaml
+++ b/src/StringMaster.UI/Resources/DataGrid.xaml
@@ -39,6 +39,6 @@
     </Style>
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="pack://application:,,,/StringMaster;component/Resources/Brushes.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/StringMaster.UI;component/Resources/Brushes.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
