--- a/src/StringMaster.UI/Resources/ToolBar.xaml
+++ b/src/StringMaster.UI/Resources/ToolBar.xaml
@@ -69,7 +69,7 @@
     <Style x:Key="ToolBarButton" TargetType="{x:Type Button}">
         <Setter Property="Height" Value="22" />
         <Setter Property="Width" Value="22" />
-        <Setter Property="Background" Value="{StaticResource DarkBackground}" />
+        <Setter Property="Background" Value="Transparent" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
