Fixed background on toolbar

--- a/src/StringMaster.UI/Palettes/StringCogoPointsView.xaml
+++ b/src/StringMaster.UI/Palettes/StringCogoPointsView.xaml
@@ -76,7 +76,7 @@
             </ToolBar>
             <ToolBar
                 HorizontalAlignment="Right"
-                Background="{StaticResource DarkBackground}"
+                Background="Transparent"
                 Style="{DynamicResource ToolBarStyle}">
                 <Button Click="DismissPalette_Click" Style="{StaticResource ToolBarButton}">
                     <Border
