--- a/src/StringMaster.UI/Palettes/StringCogoPointsView.xaml
+++ b/src/StringMaster.UI/Palettes/StringCogoPointsView.xaml
@@ -95,6 +95,7 @@
                         </Image.Style>
                     </Image>
                 </Button>
+                <ComboBox ItemsSource="{Binding PointGroups}" SelectedItem="{Binding SelectedPointGroup}" />
             </ToolBar>
             <ToolBar
                 HorizontalAlignment="Right"
